parsing/autoGenParser.py
class parser:
    
    def __init__(self, tokens):
        
        self.tokens = tokens
        self.currTokenNum = 0
        
    def empty(self):
        return (self.currTokenNum == len(self.tokens))
        
    def getCurrTokenNum(self):
        return self.currTokenNum
        
    def setCurrTokenNum(self, num):
        self.currTokenNum = num
    
    def prevToken(self):
        if self.currTokenNum > 0:
            return self.tokens[self.currTokenNum - 1]
        else:
            return [None, None, None, None, None]
            
    def currToken(self):
        if self.currTokenNum < len(self.tokens):
            return self.tokens[self.currTokenNum]
        else:
            return [None, None, None, None, None]
        
    def getToken(self):
        if self.currTokenNum < len(self.tokens):
            retVal = self.tokens[self.currTokenNum]
            self.currTokenNum += 1
            return retVal
        else:
            return [None, None, None, None, None]
        
    def putToken(self, token):
        self.currTokenNum -= 1
        
    def parse(self):
         return self.parse_translation_unit(0)

    def parse_translation_unit(self, nestLevel):

        retFlag = False

        # trying rule: external_declaration translation_unit_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_external_declaration(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_translation_unit_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_translation_unit_prime(self, nestLevel):

        retFlag = False

        # trying rule: external_declaration translation_unit_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_external_declaration(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_translation_unit_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: epsilon
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_external_declaration(self, nestLevel):

        retFlag = False

        # trying rule: function_definition
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_function_definition(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: declaration
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declaration(self, nestLevel):

        retFlag = False

        # trying rule: declaration_specifiers init_declarator_list ';'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_init_declarator_list(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ';':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: declaration_specifiers ';'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ';':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declaration_specifiers(self, nestLevel):

        retFlag = False

        # trying rule: type_specifier declaration_specifiers_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_type_specifier(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declaration_specifiers_prime(self, nestLevel):

        retFlag = False

        # trying rule: type_specifier declaration_specifiers_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_type_specifier(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: epsilon
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_init_declarator_list(self, nestLevel):

        retFlag = False

        # trying rule: init_declarator ',' init_declarator_list
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_init_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ',':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_init_declarator_list(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: init_declarator
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_init_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_init_declarator(self, nestLevel):

        retFlag = False

        # trying rule: declarator '=' initializer
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '=':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_initializer(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: declarator
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declarator(self, nestLevel):

        retFlag = False

        # trying rule: pointer direct_declarator
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_pointer(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_pointer(self, nestLevel):

        retFlag = False

        # trying rule: '*' pointer
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[0] != '*':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_pointer(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: '*'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[0] != '*':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_direct_declarator(self, nestLevel):

        retFlag = False

        # trying rule: direct_declarator_prime '[' assignment_expression ']'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '[':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_assignment_expression(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ']':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator_prime '[' '*' ']'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '[':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '*':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ']':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator_prime '[' ']'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '[':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ']':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator_prime '(' parameter_type_list ')'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '(':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_parameter_type_list(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ')':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator_prime '(' identifier_list ')'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '(':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_identifier_list(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ')':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: direct_declarator_prime '(' ')'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_direct_declarator_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != '(':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ')':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_direct_declarator_prime(self, nestLevel):

        retFlag = False

        # trying rule: '(' declarator ')'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[0] != '(':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ')':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: IDENTIFIER
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[1] != "IDENTIFIER":
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_function_definition(self, nestLevel):

        retFlag = False

        # trying rule: declaration_specifiers declarator declaration_list compound_statement
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_list(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_compound_statement(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: declaration_specifiers declarator compound_statement
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_specifiers(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declarator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_compound_statement(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declaration_list(self, nestLevel):

        retFlag = False

        # trying rule: declaration declaration_list_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_list_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_declaration_list_prime(self, nestLevel):

        retFlag = False

        # trying rule: declaration declaration_list_prime
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_declaration_list_prime(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: epsilon
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_assignment_expression(self, nestLevel):

        retFlag = False

        # trying rule: unary_expression assignment_operator assignment_expression
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_unary_expression(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_assignment_operator(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_assignment_expression(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: conditional_expression
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_conditional_expression(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

    def parse_primary_expression(self, nestLevel):

        retFlag = False

        # trying rule: '(' expression ')'
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[0] != '(':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            backupTokenNum = self.getCurrTokenNum()
            if not self.parse_expression(nestLevel + 3):
                self.setCurrTokenNum(backupTokenNum)
                retFlag = False
            else:
                retFlag = True

        if retFlag:
            token = self.getToken()
            if token[0] != ')':
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: IDENTIFIER
        oldTokenNum = self.getCurrTokenNum()

        if not retFlag:
            token = self.getToken()
            if token[1] != "IDENTIFIER":
                self.putToken(token)
                retFlag = False
            else:
                retFlag = True

        if not retFlag:
            self.setCurrTokenNum(oldTokenNum)
        else:
            return retFlag

        # trying rule: CONSTANT
        oldTokenNum = self.getCurrTokenNum()
